# rust-daylight

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html
static/css/: daylight.css
static/js/: daylight.js
