[package]
name = "daylight"
version = "1.0.0"
authors = ["Nathan Osman <nathan@quickmediasolutions.com>"]

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sunrise = "1.0.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve"]
